Bump io.airlift:airbase from 375 to 379
Bumps [io.airlift:airbase](https://github.com/airlift/airbase) from 375 to 379.
- [Release notes](https://github.com/airlift/airbase/releases)
- [Changelog](https://github.com/airlift/airbase/blob/master/CHANGES.md)
- [Commits](https://github.com/airlift/airbase/commits)

---
updated-dependencies:
- dependency-name: io.airlift:airbase
  dependency-version: '379'
  dependency-type: direct:production
  update-type: version-update:semver-major
...

Signed-off-by: dependabot[bot] <support@github.com>